--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,10 +20,15 @@
 		font-size:80%;
 	}
 	  
-	  #actions i 
+	  #record-actions i 
 	  {
-	  	font-size: 200%;
+	  	font-size: 300%;
 	  	cursor:pointer;
+	  }
+	  #startRecording, #stopRecording
+	  {
+		  cursor:pointer;
+		  width: 200px;
 	  }
 	  .recorded
 	  {
@@ -36,4 +41,9 @@
 	  .playing
 	  {
 	  	color:orange;
+	  }
+	  .userInput
+	  {
+	  	color: red;
+	  	font-weight:bold;
 	  }
